syntax = "proto3";
package Trading;

message CreateTradePacket
{
    string SessionId = 1;
    
    string Uuid = 2;
    
    string OtherPartyUuid = 3;
};