syntax = "proto3";
package Trading;

import "Stores/TradeStore.proto";
import "Stores/CompletedTradeStore.proto";

message ActiveTradesStore
{
    repeated TradeStore ActiveTrades = 1;

    repeated CompletedTradeStore CompletedTrades = 2;
};